KTS-3323 "CLONE - Breaks the pattern graph (SUP-780)" Fixed. Added scrolling to stop user interface from displaying incorrectly.
Committed By: Jonathan Byrne
Reviewed By: Megan Watson

git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@8427 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -2133,3 +2133,9 @@ body #content #add_dashlet
 	overflow:scroll;
 
 }
+
+.role_allocation
+{
+	overflow:auto; 
+	
+}
